--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services: 
   app:
     container_name: app
+    image: pilgrim2go/node-multistage-docker
     restart: always
     build: .
     environment: 
